[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/Pin.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/popUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Gate.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Timer.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/cable_end.png" type="Texture" id=7]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )
centered = false

[node name="pin3" parent="." instance=ExtResource( 3 )]
position = Vector2( 185.491, 362.448 )
value = "1010"

[node name="pin5" parent="." instance=ExtResource( 3 )]
position = Vector2( 185.491, 224.448 )
value = "1111"

[node name="pin4" parent="." instance=ExtResource( 3 )]
position = Vector2( 185.491, 512.448 )
value = "1001"

[node name="pin7" parent="." instance=ExtResource( 3 )]
position = Vector2( 1081.44, 365.282 )
scale = Vector2( -1, 1 )
source = false
value = "1011"

[node name="cableEndSprite" type="Sprite" parent="."]
visible = false
rotation = 1.5708
z_index = 9
texture = ExtResource( 7 )
offset = Vector2( 0, -25 )

[node name="timer" parent="." instance=ExtResource( 6 )]
position = Vector2( 636.116, 31.1433 )
timeout_seconds = 40

[node name="or_gate" parent="." instance=ExtResource( 5 )]
position = Vector2( 636.116, 362.448 )

[node name="popUpAnchor" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
